# Shapes

./: CMakeLists.txt  Shapes.txt
src/: Engine.cpp  Engine.h  Shape.h  main.cpp
src/Ellips/: Ellips.cpp  Ellips.h
src/Rectangle/: Rectangle.cpp  Rectangle.h
src/Triangle/: Triangle.cpp  Triangle.h
